# entity-system-inactive

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CODEDESIGN.md  Doxyfile  LICENSE.md  README.md  conanfile.py  conanfile.txt  desktop.ini  download_assets.py  loading-screen.tga  main.cpp  standalone-resources.conf
src/: CMakeLists.txt  EntitySystem.cpp  EntitySystem.hpp  Inexor.cpp  Inexor.hpp  InexorApplication.cpp  InexorApplication.hpp  entity-system-openapi.json  entity-system-openapi.yaml  entity-system.proto  main.cpp  unit_benchmark_main.cpp  unit_test_main.cpp
src/audio/: AudioModule.cpp  AudioModule.hpp
src/audio/managers/: AudioManager.cpp  AudioManager.hpp
src/audio/plugins/: AudioPlugins.cpp
src/base/: LifeCycleComponent.hpp
src/base-classes/: AttributeBase.cpp  AttributeBase.hpp  AttributeTypeBase.cpp  AttributeTypeBase.hpp  DataContainer.hpp  TypeBase.cpp  TypeBase.hpp  TypeInstanceBase.hpp  TypeInstanceBase_tests.cpp
src/base-classes/GUID/: GUIDBase.cpp  GUIDBase.hpp
src/base-classes/tests/: AttributeBase_tests.cpp  TypeBase_tests.cpp
src/client/: ClientLifecycle.cpp  ClientLifecycle.hpp  ClientModule.cpp  ClientModule.hpp
src/command/: CommandModule.cpp  CommandModule.hpp
src/command/managers/: CommandManager.cpp  CommandManager.hpp
src/configuration/: ConfigurationModule.cpp  ConfigurationModule.hpp
src/configuration/managers/: CommandLineArgumentsConfigurationInitializer.cpp  CommandLineArgumentsConfigurationInitializer.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  EnvVarConfigurationInitializer.cpp  EnvVarConfigurationInitializer.hpp  SystemConfigurationInitializer.cpp  SystemConfigurationInitializer.hpp
src/console/: ConsoleModule.cpp  ConsoleModule.hpp
src/console/managers/: ConsoleManager.cpp  ConsoleManager.hpp
src/console/model/: Console.cpp  Console.hpp
src/data-container/: DataContainer.cpp  DataContainer.hpp  DataTypes.hpp
src/data-container/tests/: DataContainer_tests.cpp
src/data-validation/: DataValidation.cpp  DataValidation.hpp  DataValidationBase.cpp  DataValidationBase.hpp  DataValidationResults.hpp
src/entity-manager/: EntityManager.hpp
src/entity-manager/entity-attribute-manager/: EntityAttributeTypeInstanceManager.cpp  EntityAttributeTypeInstanceManager.hpp  EntityAttributeTypeManager.cpp  EntityAttributeTypeManager.hpp
src/entity-manager/entity-relation-attribute-manager/: EntityRelationAttributeTypeInstanceManager.cpp  EntityRelationAttributeTypeInstanceManager.hpp  EntityRelationAttributeTypeManager.cpp  EntityRelationAttributeTypeManager.hpp
src/entity-manager/entity-relation-manager/: EntityRelationTypeInstanceManager.cpp  EntityRelationTypeInstanceManager.hpp  EntityRelationTypeManager.cpp  EntityRelationTypeManager.hpp
src/entity-manager/entity-type-manager/: EntityTypeInstanceManager.cpp  EntityTypeInstanceManager.hpp  EntityTypeManager.cpp  EntityTypeManager.hpp
src/entity-system/: EntitySystem.cpp  EntitySystem.hpp  EntitySystemModule.cpp  EntitySystemModule.hpp
src/entity-system-example/: ColorManager.cpp  ColorManager.hpp
src/entity-system-rest/: .gitignore  RestServer.cpp  RestServer.hpp  RestServerLogger.hpp  Serializer.hpp
src/entity-system-rest/api/: AttributeApi.cpp  AttributeApi.h  AttributeApi.hpp  EntityInstanceApi.cpp  EntityInstanceApi.h  EntityInstanceApi.hpp  EntityInstances.cpp  EntityInstances.hpp  EntitySystemApi.cpp  EntitySystemApi.h  EntitySystemApi.hpp  EntityTypeApi.cpp  EntityTypeApi.h  EntityTypeApi.hpp  RelationInstanceApi.cpp  RelationInstanceApi.hpp  RelationTypeApi.cpp  RelationTypeApi.hpp  RelationshipInstanceApi.cpp  RelationshipInstanceApi.h  RelationshipInstanceApi.hpp  RelationshipTypeApi.cpp  RelationshipTypeApi.h  RelationshipTypeApi.hpp
src/entity-system-rest/controllers/: EntityInstance.hpp
src/entity-system-rest/model/: Attribute.cpp  Attribute.hpp  AttributeDto.cpp  AttributeDto.hpp  EntityInstance.cpp  EntityInstance.h  EntityInstance.hpp  EntityInstanceDto.cpp  EntityInstanceDto.hpp  EntitySystem.cpp  EntitySystem.h  EntitySystem.hpp  EntitySystemDto.cpp  EntitySystemDto.hpp  EntitySystemMessage.cpp  EntitySystemMessage.hpp  EntitySystemMessageDto.cpp  EntitySystemMessageDto.hpp  EntityType.cpp  EntityType.h  EntityType.hpp  EntityTypeDto.cpp  EntityTypeDto.hpp  RelationInstance.cpp  RelationInstance.hpp  RelationInstanceDto.cpp  RelationInstanceDto.hpp  RelationType.cpp  RelationType.hpp  RelationTypeDto.cpp  RelationTypeDto.hpp  RelationshipInstance.cpp  RelationshipInstance.h  RelationshipInstance.hpp  RelationshipType.cpp  RelationshipType.h  RelationshipType.hpp
src/entity-system/debugger/: EntitySystemDebugger.cpp  EntitySystemDebugger.hpp
src/error-handling/: ErrorHandling.cpp  ErrorHandling.hpp  ErrorLevels.hpp
src/graphql/: .graphqlconfig  EntitiesApi.cpp  EntitiesApi.h  UnifiedToday.cpp  UnifiedToday.h  schema.entities.graphql
src/input/: InputModule.cpp  InputModule.hpp
src/keyboard/: KeyboardInputModule.cpp  KeyboardInputModule.hpp
src/logging/: LogManager.cpp  LogManager.hpp
src/macros/: Macros.hpp
src/managers/: EntityManager.cpp  EntityManager.hpp
src/mouse/: MouseInputModule.cpp  MouseInputModule.hpp
src/renderer/: RendererModule.cpp  RendererModule.hpp
src/rest/: RestServer.cpp  RestServer.hpp
src/return-codes/: ReturnCodes.hpp
src/scripting/: ScriptingModule.cpp  ScriptingModule.hpp
src/server/: ServerLifecycle.cpp  ServerLifecycle.hpp  ServerModule.cpp  ServerModule.hpp
src/templates/: TypeContainerTemplate.hpp  TypeInstanceManager.hpp  TypeInstanceManagerTemplate.hpp  TypeInstancesContainerTemplate.hpp  TypeInstancesMap.hpp  TypeManager.hpp  TypeManagerTemplate.hpp  TypeVector.hpp
src/type-system/: TypeSystemModule.cpp  TypeSystemModule.hpp
src/typedefs/: CreateMacros.hpp  TypeDefinitions.hpp
src/ui/: UserInterfaceModule.cpp  UserInterfaceModule.hpp
src/visual-scripting/: VisualScripting.cpp  VisualScripting.hpp  VisualScriptingSystem.cpp  VisualScriptingSystem.hpp  VisualScriptingSystemModule.cpp  VisualScriptingSystemModule.hpp
(+1284 files in other folders)
